--- a/client/src/views/Home/Home.css
+++ b/client/src/views/Home/Home.css
@@ -1,22 +1,94 @@
 .App {
-    text-align: center;
+
 }
 
-.App-logo {
-    height: 40vmin;
+
+.landing-page {
+
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  background-color: white;
+  flex-direction: column;
+
 }
 
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+.body-page {
+
+  /*height:100vh;*/
+
+
 }
 
-.App-link {
-    color: #09d3ac;
+.heart {
+
+
+  mix-blend-mode: multiply;
+
+  height: 25vh;
+  width: 25vh;
+  position: absolute;
+  left:18vw;
+  top: 54px;
+  top:15vh;
+
+
+
+  margin: auto;
+
+}
+
+.body-text {
+  position: absolute;
+  text-align: center;
+  font-size: 2vw;
+  width: 30vw;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-weight: 400;
+  top: 58px;
+  top:17vh;
+  left:0;
+  right:0;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.upper-buttons {
+  height: 15vh;
+  width: 50vw;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.btn-default {
+
+  background-color: #1dc2ae !important;
+  color: black !important;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-weight: 600;
+
+
+
+
+}
+
+.btn-default:hover {
+  background-color: #179B8B !important;
+  color: black !important;
+
+
+}
+
+.lower-buttons {
+
+  width: 30vw;
+  position: absolute;
+  bottom:5vh;
+  left:0;
+  right:0;
+  margin-left: auto;
+  margin-right: auto;
+
 }
