--- a/client/src/components/CategoryPage.css
+++ b/client/src/components/CategoryPage.css
@@ -8,22 +8,24 @@ a.service-button:hover{
 }
 
 div.service-button-main{
-	border: 4px solid #1dc2ae;
+	border: 4px solid #c2c2c2;
 	border-radius: 1em;
-	width: 8em;
-	height: 8em;
+	width: 9em;
+	height: 9em;
 	margin: 0.1em;
+	margin-bottom: 1em;
 
 	transition: border 0.2s;
 	transition-timing-function: linear;
 }
 
 a.service-button:hover div.service-button-main{
-	border: 8px solid #1dc2ae;
+	border: 4px solid #1dc2ae;
 }
 
 a.service-button p{
 	color: #074b69;
+	margin-bottom: 0.5em;
 }
 
 a.service-button:hover p{
@@ -37,6 +39,10 @@ div.service-button-main i{
 
 div.service-button-main p{
 	text-align: center;
+}
+
+div.cat-page {
+	margin: 2em;
 }
 
 .category-list img.card-img-top {
