Add maximum width and center cat-page header
+ Add maximum-width element. When the page grows beyond this maximum width, it is constrained in the center.
~ Modify CategoryPage.css so that the cat-page header image and text look better on narrow screens.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,11 @@ body{
 	font-family: Open Sans Regular, sans-serif;
 }
 
+body.top-level{
+	max-width: 64rem;
+	margin: auto;
+}
+
 h1{
 	font-family: Open Sans ExtraBold;
 }
