Redo the side pane
~ Re-organize the side pane to make it more modular - now, other menus can be displayed in it.
~ Cascading Style Sins

--- a/client/src/views/Category/CategoryView.css
+++ b/client/src/views/Category/CategoryView.css
@@ -37,18 +37,39 @@ a.service-button:hover p{
     color: #074b69;
 }
 
-div.service-button-edit{
-    text-align: right;
-    padding-right: 1em;
-    padding-top: 0.5em;
-    z-index: 1;
+div.service-button-wrapper div.service-button-btn-container {
     float: right;
+    z-index: 1;
+    padding-right: 1.5em;
+    padding-top: 1em;
+}
+
+i.service-button-edit{
     cursor: pointer;
     transition: color 0.2s;
 }
 
-div.service-button-edit:hover{
+i.service-button-edit:hover{
     color: #1dc2ae;
+}
+
+i.service-button-delete{
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+i.service-button-delete:hover{
+    color: #e52207;
+}
+
+div.service-button-wrapper p.btn-deck{
+    z-index: 1;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -3em;
+    width: max-content;
+    display: block;
 }
 
 div.service-button-main i{
