Set side pane to scroll when necessary
Before this, side-pane contents which were too long to fit in one screen would be out-of-reach.

--- a/client/src/components/SidePane/SidePane.css
+++ b/client/src/components/SidePane/SidePane.css
@@ -23,6 +23,8 @@ div.side-pane-hidden {
 div.side-pane div.side-pane-content{
     position: fixed;
     width: calc(60% - 4em);
+    overflow: auto;
+    height: 90%;
 }
 
 div.side-pane i.panel-close{
