--- a/client/src/components/SearchableList/SearchableList.css
+++ b/client/src/components/SearchableList/SearchableList.css
@@ -5,15 +5,17 @@ div.searchable-list{
     border: 1px solid #074b69;
 }
 
-div.searchable-list input{
+div.searchable-list input, div.side-pane div.searchable-list input{
     width: 100%;
-    margin-bottom: 0.2em;
+    margin: 0 0 0.2em 0;
+    padding: 0.1em;
     border: 2px solid #c2c2c2;
+    border-radius: 0;
     
     transition: border 0.5s;
 }
 
-div.searchable-list input:focus{
+div.searchable-list input:focus, div.side-pane div.searchable-list input:focus{
     border: 2px solid #1dc2ae;
 }
 
